Bug 50143: All radio buttons should be unchecked before checking new one when restoring frame state r=jst@netscape.com